[gd_scene load_steps=3 format=3 uid="uid://dgto76vlk31v"]

[ext_resource type="Script" uid="uid://c24v3m1whymx1" path="res://scenes/shop.gd" id="1_lx5au"]
[ext_resource type="FontFile" uid="uid://hqpa84d2dqvp" path="res://fonts/Better VCR 9.0.1.ttf" id="2_xfvoa"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lx5au")

[node name="Size" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_xfvoa")
toggle_mode = true
text = "Enlarge"

[node name="Damage" type="Button" parent="."]
layout_mode = 0
offset_left = 109.0
offset_right = 181.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_xfvoa")
toggle_mode = true
text = "Damage"

[node name="AttackSpeed" type="Button" parent="."]
layout_mode = 0
offset_left = 216.0
offset_right = 325.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_xfvoa")
toggle_mode = true
text = "Attack Speed"

[node name="LargeEnemies" type="Button" parent="."]
layout_mode = 0
offset_left = 371.0
offset_right = 492.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_xfvoa")
toggle_mode = true
text = "Large Enemies"

[node name="CritChance" type="Button" parent="."]
layout_mode = 0
offset_left = 558.0
offset_right = 669.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_xfvoa")
toggle_mode = true
text = "+ Crit Chance"

[node name="Stats" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DamageStatLabel" type="Label" parent="Stats"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 980.0
offset_top = 11.0
offset_right = 1117.0
offset_bottom = 46.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xfvoa")
text = "Dmg: 100
Crit Chance: 0
Attack Speed: 100"

[connection signal="toggled" from="Size" to="." method="_on_size_toggled"]
[connection signal="toggled" from="Damage" to="." method="_on_damage_toggled"]
[connection signal="toggled" from="AttackSpeed" to="." method="_on_attack_speed_toggled"]
[connection signal="toggled" from="LargeEnemies" to="." method="_on_large_enemies_toggled"]
[connection signal="toggled" from="CritChance" to="." method="_on_crit_chance_toggled"]
